添加语言类型选择